@@ -60,6 +60,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #24489: ensure a previously set C errno doesn't disturb cmath.polar().
+
 - Issue #5633: Fixed timeit when the statement is a string and the setup is not.
 
 - Issue #24326: Fixed audioop.ratecv() with non-default weightB argument.
